# DesignPattern

./: README.md
AbstractFactory/: Makefile.inc  main.cc
AbstractFactory/src/: apple.cc  chromebook.cc  chromebook.h  google.cc  iphone.cc  iphone.h  macbook.cc  macbook.h  notebook.cc  phone.cc  pixel.cc  pixel.h
Bridge/: Makefile.inc  main.cc
Bridge/src/: alexa.cc  click-switch.cc  lamp.cc  tv.cc
Builder/: Makefile.inc  main.cc
Builder/src/: engineer.cc  house.cc  igloo_blueprint.cc  tipi_blueprint.cc
ChainOfResponsibility/: Makefile.inc  main.cc
ChainOfResponsibility/src/: negative-processor.cc  number.cc  positive-processor.cc  processor.cc  zero-processor.cc
Command/: Makefile.inc  main.cc
Command/src/: chicken.cc  cooker.cc  steak.cc  waiter.cc
Composite/: Makefile.inc  main.cc
Composite/src/: company.cc  department.cc
Decorator/: Makefile.inc  main.cc
Decorator/src/: main_dish.cc  side.cc  side_factory.cc  sides.cc  sides.h
Facade/: Makefile.inc  main.cc
Factory/: Makefile.inc  main.cc
Memento/: Makefile  Makefile.inc  main.cc
Observer/: Makefile.inc  main.cc
Prototype/: Makefile.inc  main.cc
SimpleFactory/: CMakeLists.txt  Makefile.inc  main.cc
SimpleFactory/include/SimpleFactory/: OperationFactory.h
SimpleFactory/src/: OperationAdd.cc  OperationAdd.h  OperationDiv.cc  OperationDiv.h  OperationFactory.cc  OperationMul.cc  OperationMul.h  OperationSub.cc  OperationSub.h
Singleton/: Makefile.inc  main.cc
State/: Makefile.inc  main.cc
Strategy/: Makefile  Makefile.inc  main.cc
Template/: Makefile.inc  main.cc
(+98 files in other folders)
